Toggled navbar menu v.overlap resolved

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -191,7 +191,9 @@ footer {
   margin-bottom: 25px !important;  
 }
 }
-
+ul.nav.navbar-nav {
+  margin-top: 20px;
+}
 
 /* center navigation */
  .nav.navbar-nav {
